# bug-celery-az-servicebus

./: .gitignore  README.md  pyproject.toml
mysite/: celery.py  settings.py  tasks.py  tests.py  urls.py  views.py
