[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Tony Lefebvre <tony.lefebvre.contractor@ardian.com>"]


[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
celery = "^5.3.6"
kombu = "^5.3.5"
azure-servicebus = "^7.11.4"
azure-identity = "^1.15.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-django = "^4.8.0"
pytest-asyncio = "^0.23.5"
pytest-dotenv = "^0.5.2"
aiohttp = "^3.9.3"
prettier = "^0.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mysite.settings"
# -- recommended but optional:
python_files = ["tests.py", "test_*.py", "*_test.py", "testing/python/*.py"]
